plugins {
    id("io.micronaut.application") version "4.6.2" apply false
    id("com.gradleup.shadow") version "8.3.9" apply false
    id("io.micronaut.aot") version "4.6.2" apply false
}

allprojects {
    apply plugin: 'java'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    clean {
        delete rootProject.file("logs")
        delete project.file("logs")
    }
}

subprojects {
    group = "turoran"
    version = "0.1"

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaExec).configureEach {
        systemProperty "micronaut.config.files", rootProject.file("application.properties").absolutePath
        systemProperty "micronaut.application.name", project.name
    }

    tasks.withType(Test).configureEach {
        systemProperty "micronaut.config.files", rootProject.file("application.properties").absolutePath
        systemProperty "micronaut.application.name", project.name
    }
}

tasks.named("test") {
    dependsOn(subprojects.collect { it.tasks.withType(Test) })
}

tasks.register("VerifyGRF") {
    group = "verification"
    description = "Alias for :grfloader:VerifyGRF"
    dependsOn(":grfloader:VerifyGRF")
}

tasks.register("ValidateAllGRFS") {
    group = "verification"
    description = "Alias for :grfloader:ValidateAllGRFS"
    dependsOn(":grfloader:ValidateAllGRFS")
}

tasks.register("PathMappingTool") {
    group = "verification"
    description = "Alias for :grfloader:PathMappingTool"
    dependsOn(":grfloader:PathMappingTool")
}

tasks.register("runClient") {
    group = "application"
    description = "Runs the robrowserclient application"
    dependsOn(":client:run")
}

tasks.register("runProxy") {
    group = "application"
    description = "Runs the wsproxy application"
    dependsOn(":wsproxy:run")
}

tasks.register("runAll") {
    group = "application"
    description = "Runs both the client and the proxy"
    dependsOn("runClient", "runProxy")
}
